--- a/.github/workflows/check-syntax.yml
+++ b/.github/workflows/check-syntax.yml
@@ -4,10 +4,11 @@ on: [push, pull_request]
 jobs:
   check-syntax:
     runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: Ansible list
-          uses: ansible/ansible-lint-action@151b9a2
-        - name: YAML Lint
-          uses: ibiqlik/action-yamllint@v1
+    steps:
+      - name: Get code
+        uses: actions/checkout@v2
+      - name: Ansible list
+        uses: ansible/ansible-lint-action@151b9a2
+      - name: YAML Lint
+        uses: ibiqlik/action-yamllint@v1
 
