--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,11 @@
 ---
 galaxy_info:
-  author: your name
-  description: your role description
-  company: your company (optional)
+  author: Igor Bronovskyi
+  description: Example of ansible role
+  company: BrunIF
   license: MIT
   min_ansible_version: 2.1
+  platforms:
+  - name: Ubuntu
+    versions:
+    - all
